# forge

./: .gitignore  Cargo.toml  FORGE_UX_SPEC.md  JULES_FORGE_GUI.md  JULES_IMPL_PART1.md  JULES_IMPL_PART2.md  JULES_IMPL_PART3.md  JULES_IMPL_PART4.md  JULES_TASKS.md  PHASE3_PLAN.md  README.md  TASK_STATUS_REPORT.md  branches.txt  build2.txt  build_errors.txt  build_errors2.txt  check_out.txt  check_output.txt  check_result.txt  confidence.db  create_shortcut.ps1  errors.txt  gitlog.txt  gitlog_clean.txt
.jules/: EPIC_BRING_FORGE_ALIVE.md  INSTRUCTIONS.md
.jules/tickets/: C1_confidence-gutter.md  C2_bayesian-network-engine.md  C3_uncertainty-propagation.md  C4_onnx-embedding-pipeline.md  C5_xgboost-bug-predictor.md  C6_surface-intelligence-protocol.md  C7_feedback-pipeline.md  C8_ghost-tabs-anticipatory.md  C9_C10_immune-developer.md  MASTER_INDEX.md
crates/forge-agent/: Cargo.toml
crates/forge-agent/src/: agent.rs  chat.rs  chat_panel.rs  config.rs  inline_completion.rs  lib.rs  provider.rs
crates/forge-anticipation/: Cargo.toml
crates/forge-anticipation/src/: ghost_tabs.rs  lib.rs  markov.rs  workspace_snapshot.rs
crates/forge-anticipation/tests/: test_ghost_tabs.rs  test_snapshots.rs
crates/forge-app/: Cargo.toml
crates/forge-app/src/: accessibility.rs  activity_bar.rs  application.rs  application_impl_debug.rs  autocomplete.rs  bottom_panel.rs  bracket_match.rs  breadcrumb.rs  breadcrumb_dropdown.rs  code_folding.rs  command_palette.rs  comment_toggle.rs  context_menu.rs  cursor.rs  debug.rs  debug_toolbar.rs  debug_ui.rs  debug_views.rs  diff_view.rs  dock.rs  dock_input.rs  drag_drop.rs  editor.rs  editor_groups.rs  emmet.rs  extensions.rs  extensions_panel.rs  file_explorer.rs  file_picker.rs  file_tree_ui.rs  find_bar.rs  formatter.rs  git_blame.rs  git_branch.rs  git_gutter.rs  git_panel.rs  go_to_def.rs  go_to_line.rs  gpu.rs  guard.rs  (+39 more)
crates/forge-bayesnet/: Cargo.toml
crates/forge-bayesnet/src/: lib.rs
crates/forge-confidence/: Cargo.toml
crates/forge-confidence/src/: aggregate.rs  color.rs  db.rs  engine.rs  lib.rs  models.rs  score.rs  temporal.rs  types.rs
crates/forge-confidence/tests/: test_scoring.rs
crates/forge-config/: Cargo.toml
crates/forge-config/src/: editor.rs  lib.rs  terminal.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: buffer.rs  file_io.rs  git.rs  history.rs  lib.rs  position.rs  project.rs  recovery.rs  selection.rs  syntax.rs  terminal.rs  transaction.rs
crates/forge-core/src/layout/: mod.rs
crates/forge-debug/: Cargo.toml
crates/forge-debug/src/: client.rs  lib.rs
crates/forge-developer/: Cargo.toml
crates/forge-developer/src/: bus_factor.rs  knowledge_graph.rs  lib.rs  model.rs
crates/forge-developer/tests/: test_developer.rs
crates/forge-extension-host/: Cargo.toml
crates/forge-extension-host/src/: api.js  lib.rs  protocol.rs
crates/forge-feedback/: Cargo.toml
crates/forge-feedback/src/: ema.rs  lib.rs  store.rs  tracker.rs
crates/forge-icons/: Cargo.toml
crates/forge-icons/src/: lib.rs
crates/forge-immune/: Cargo.toml
crates/forge-immune/src/: anomaly_detector.rs  audit.rs  lib.rs  ml_cap.rs  mutation_validator.rs  temporal_decay.rs
crates/forge-immune/tests/: test_immune.rs
crates/forge-input/: Cargo.toml
crates/forge-input/src/: clipboard.rs  lib.rs
crates/forge-keybindings/: Cargo.toml
crates/forge-keybindings/src/: lib.rs
crates/forge-lsp/: Cargo.toml
crates/forge-lsp/src/: client.rs  diagnostics.rs  lib.rs  server.rs  transport.rs
crates/forge-ml/: Cargo.toml
crates/forge-ml/src/: lib.rs
crates/forge-net/: Cargo.toml
crates/forge-net/src/: client.rs  health.rs  lib.rs  retry.rs
crates/forge-plugin/: Cargo.toml
crates/forge-plugin/src/: host_api.rs  lib.rs  runtime.rs
crates/forge-propagation/: Cargo.toml
crates/forge-propagation/src/: engine.rs  graph.rs  lib.rs  models.rs
crates/forge-propagation/tests/: test_propagation.rs
crates/forge-renderer/: Cargo.toml
crates/forge-renderer/src/: atlas.rs  decorations.rs  lib.rs  pipeline.rs  text.rs  theme.rs  viewport.rs
crates/forge-search/: Cargo.toml
crates/forge-search/src/: content.rs  fuzzy.rs  lib.rs
crates/forge-semantic/: Cargo.toml
crates/forge-semantic/src/: lib.rs
crates/forge-surfaces/: Cargo.toml
crates/forge-surfaces/src/: file_explorer.rs  lib.rs  protocol.rs
crates/forge-surfaces/tests/: test_explorer.rs
crates/forge-syntax/: Cargo.toml
crates/forge-syntax/src/: colors.rs  highlighter.rs  language.rs  lib.rs  parser.rs
crates/forge-terminal/: Cargo.toml
crates/forge-terminal/src/: ansi.rs  grid.rs  lib.rs  pty.rs  shell.rs
crates/forge-test-tools/: Cargo.toml
crates/forge-test-tools/src/: assertions.rs  input_sim.rs  lib.rs  screenshot.rs  zone_debug.rs
crates/forge-theme/: Cargo.toml
crates/forge-theme/src/: builtin.rs  lib.rs  token.rs
crates/forge-types/: Cargo.toml
crates/forge-types/src/: lib.rs
crates/forge-window/: Cargo.toml
crates/forge-window/src/: event_loop.rs  input.rs  lib.rs  window.rs
crates/forge-workspace/: Cargo.toml
crates/forge-workspace/src/: lib.rs
tasks/: GLOBAL_RULES.md  JULES_PROMPTS_SESSION1.md  JULES_PROMPTS_SESSION1_PART2.md  JULES_PROMPTS_SESSION1_PART3.md  JULES_PROMPT_PROD_FINISH.md  ROADMAP_TO_1.0.md  UNIFIED_SESSION_7_8_9.md  VSCODE_PARITY_REPORT.md
tasks/session1/: DEPLOY_SESSION1.md  agent_01.md  agent_02.md  agent_03.md  agent_04.md  agent_05.md  agent_06.md  agent_07.md  agent_08.md  agent_09.md  agent_10.md
tasks/session2/: DEPLOY_SESSION2.md  all_agents.md
tasks/session3/: DEPLOY_SESSION3.md  all_agents.md
tasks/session3_redo/: DEPLOY_SESSION3_REDO.md
tasks/session4/: DEPLOY_SESSION4.md  all_agents.md
tasks/session5/: DEPLOY_SESSION5.md  all_agents.md
tasks/session6/: DEPLOY_SESSION6.md
tasks/session7/: DEPLOY_SESSION7.md
tasks/session8/: DEPLOY_SESSION8.md
tasks/session9/: DEPLOY_SESSION9.md
