[workspace]
members = [
    "crates/forge-core",
    "crates/forge-renderer",
    "crates/forge-window",
    "crates/forge-app",
    "crates/forge-config",
    "crates/forge-theme",
    "crates/forge-input",
    "crates/forge-confidence",
    "crates/forge-propagation",
    "crates/forge-semantic",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Forge Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/forge"

[workspace.dependencies]
# Text Buffer
ropey = "1"
smallvec = "1"
unicode-segmentation = "1"
encoding_rs = "0.8"

# GPU Rendering
wgpu = "24"
cosmic-text = "0.12"

# Windowing
winit = "0.30"

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1"

# Confidence Engine
rusqlite = { version = "0.31", features = ["bundled"] }
petgraph = "0.6"
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
git2 = "0.20"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
