[package]
name = "forge-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
async-trait.workspace = true
dirs-next.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
