[package]
name = "forge-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
ropey = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
forge-core = { path = "../forge-core" }
forge-renderer = { path = "../forge-renderer" }
forge-confidence = { path = "../forge-confidence" }

# GPU + Window
wgpu = { workspace = true }
winit = { workspace = true }
glyphon = { workspace = true }
pollster = { workspace = true }
arboard = { workspace = true }

# Core
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs-next.workspace = true
