[package]
name = "forge-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
ropey = { workspace = true }
bytemuck = { version = "1", features = ["derive"] }
forge-core = { path = "../forge-core" }
forge-renderer = { path = "../forge-renderer" }
forge-confidence = { path = "../forge-confidence" }
forge-config = { path = "../forge-config" }
forge-theme = { path = "../forge-theme" }
forge-debug = { path = "../forge-debug" }
forge-lsp = { path = "../forge-lsp" }
forge-plugin = { path = "../forge-plugin" }
forge-terminal = { path = "../forge-terminal" }
forge-search = { path = "../forge-search" }
forge-syntax = { path = "../forge-syntax" }

# Versioned dependencies
git2 = { version = "0.20.4" }
tree-sitter = { version = "0.24" }

# GPU + Window
wgpu = { workspace = true }
winit = { workspace = true }
glyphon = { workspace = true }
pollster = { workspace = true }
arboard = { workspace = true }

# Core
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs-next.workspace = true
regex = { workspace = true }
