[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ropey = { workspace = true }
smallvec = { workspace = true }
unicode-segmentation = { workspace = true }
encoding_rs = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
git2 = "0.20.4"
portable-pty = "0.9.0"

[dev-dependencies]
proptest = { workspace = true }
