[package]
name = "forge-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
# For terminal handling, maybe portable-pty or just std::process
# Using std::process + tokio for now
