[package]
name = "forge-surfaces"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
forge-confidence = { path = "../forge-confidence" }

[dev-dependencies]
tempfile = "3"
