[package]
name = "forge-syntax"
version.workspace = true
edition.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
