[package]
name = "forge-window"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
forge-renderer = { path = "../forge-renderer" }
winit = { workspace = true }
wgpu = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
